--- a/inst/pkgdown.yml
+++ b/inst/pkgdown.yml
@@ -1,10 +1,9 @@
-pandoc: 2.11.1
-pkgdown: 2.0.2
+pandoc: '2.12'
+pkgdown: 2.1.0
 pkgdown_sha: ~
 articles:
   MPA_basics_microglia: MPA_basics_microglia.html
-last_built: 2024-03-23T03:06Z
+last_built: 2024-10-10T14:52Z
 urls:
   reference: https://smorabit.github.io/COMPACT/reference
   article: https://smorabit.github.io/COMPACT/articles
-
