--- a/inst/pkgdown.yml
+++ b/inst/pkgdown.yml
@@ -3,7 +3,7 @@ pkgdown: 2.1.1
 pkgdown_sha: ~
 articles:
   basic_tutorial: basic_tutorial.html
-last_built: 2024-11-01T16:33Z
+last_built: 2024-11-01T17:21Z
 urls:
-  reference: https://smorabit.github.io/COMPACT/reference
-  article: https://smorabit.github.io/COMPACT/articles
+  reference: https://smorabit.github.io/compact/reference
+  article: https://smorabit.github.io/compact/articles
