update docs and README

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,19 @@
 
 export(ApplyPerturbation)
 export(ApplyPropagation)
+export(BarplotShap)
+export(BeeswarmplotShap)
 export(ComputeDistance)
+export(FindShapKeyDriver)
 export(HeatmapDistance)
 export(ModelZINB)
 export(ModulePerturbation)
 export(PerturbationTransitions)
 export(PerturbationVectors)
 export(PlotTransitionVectors)
+export(ReloadShapOutput)
 export(SampleZINB)
+export(TFPerturbation)
 export(colDeltaCor_knn)
 export(grid_vectors)
 import(Matrix)
