--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(ApplyPropagation)
 export(BarplotShap)
 export(BeeswarmplotShap)
 export(ComputeDistance)
+export(CustomPerturbation)
 export(FindShapKeyDriver)
 export(HeatmapDistance)
 export(ModelZINB)
